--- a/src/scripts/components/Button/style.css
+++ b/src/scripts/components/Button/style.css
@@ -1,3 +1,10 @@
 .className {
-  background: lime
+  background:tan;
+  padding: 0.5em;
+  border-radius: 50%;
+  border:0;
+  width:2em;
+  margin: 0 0.5em;
+  font-weight: 900;
+  font-size: 30px;
 }
