--- a/src/scripts/components/Controller/style.css
+++ b/src/scripts/components/Controller/style.css
@@ -1,3 +1,11 @@
 .className{
-  background: pink
+  background: pink;
+  display: inline-block;
+  padding: 2em;
+  border-radius: 50%;
+  margin: 0 15px;
+
+  &__input{
+    width:35px
+  }
 }
