--- a/src/scripts/components/Counter/style.css
+++ b/src/scripts/components/Counter/style.css
@@ -5,13 +5,28 @@
   transform: translateX(-50%);
   text-align: center;
   padding-top: 2em;
+
+  &::after {
+    position: absolute;
+    content: '';
+    display: inline-block;
+    top:0;
+    bottom: 0;
+    width: 200%;
+    background: navy;
+    z-index: -1;
+    transform: translateX(-50%);
+    border-radius: 50%
+
+  }
   h2 {
-    color: navy; 
+    color: white; 
   }
   &__val {
     display: block;
-    font-size: 50px;
+    font-size: 60px;
     font-weight: 800;
+    color:yellow;
   }
 
 }
